--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Site Title"
 title_separator          : "-"
 name                     : "Justin DiRose"
-description              : "An amazing websiteo."
+description              : "Descriptions.."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
@@ -65,7 +65,7 @@ google_ad_slot           :
 author:
   name             : "Justin DiRose"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
+  bio              : "I am an amazing person. And so are you."
   location         : "Somewhere"
   email            :
   uri              :
